<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/loan_assumptions_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan_assumptions_explanation" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/loan_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_amount" />
        <EditText
            android:id="@+id/loan_amount_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_amount_hint" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_duration_months" />
        <EditText
            android:id="@+id/loan_duration_months_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_duration_months_hint" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_rate" />
        <EditText
            android:id="@+id/loan_rate_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_rate_hint" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_payment" />
        <TextView
            android:id="@+id/payment_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"/>
</LinearLayout>